--- a/custom_components/aircloud/manifest.json
+++ b/custom_components/aircloud/manifest.json
@@ -1,10 +1,12 @@
 {
   "domain": "air_cloud",
-  "name": "AirCloud HA",
-  "documentation": "https://github.com/svmironov/air_cloud_ha",
-  "issue_tracker": "https://github.com/hcoohb/air_cloud_ha/issues",
+  "name": "AirCloud",
+  "documentation": "https://github.com/svmironov/aircloud_ha",
+  "issue_tracker": "https://github.com/svmironov/aircloud_ha/issues",
   "dependencies": [],
   "codeowners": ["@svmironov"],
-  "requirements": ["websocket-client>=1.5.1", "aiohttp=>3.9.3"],
-  "version": "0.0.1"
+  "iot_class": "cloud_push",
+  "config_flow": true,
+  "requirements": ["websocket-client>=1.5.1", "aiohttp>=3.9.3"],
+  "version": "2.0.0"
 }
